--- a/src/styles/service.scss
+++ b/src/styles/service.scss
@@ -10,6 +10,7 @@
 section {
   &.services_sec {
     p.header_text {
+      margin: 39px 30px;
       font-size: 48px;
       font-weight: 700;
       line-height: 64px;
