--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -16,10 +16,20 @@ section {
     padding-top: 48px;
     footer {
       padding-left: 1rem;
+      @media screen and (max-width: 800px) {
+        padding-left: 4rem;
+      }
+
       .top_footer {
         display: flex;
         justify-content: space-evenly;
         align-items: flex-start;
+
+        @media screen and (max-width: 800px) {
+          display: grid;
+          gap: 5rem;
+          grid-template-columns: repeat(2, 1fr);
+        }
 
         .logo {
           p {
@@ -28,6 +38,13 @@ section {
             font-weight: 700;
             line-height: 43px;
             letter-spacing: 0em;
+
+            @media screen and (max-width: 800px) {
+              inset: 0;
+              font-size: 18px;
+              font-weight: 700;
+              line-height: 17px;
+            }
           }
         }
 
@@ -38,6 +55,10 @@ section {
           font-weight: 700;
           line-height: 37px;
           letter-spacing: 0em;
+          @media screen and (max-width: 800px) {
+            font-size: 16px;
+            line-height: 17px;
+          }
         }
         ul {
           list-style: none;
@@ -49,6 +70,11 @@ section {
             line-height: 33px;
             letter-spacing: 0em;
 
+            @media screen and (max-width: 800px) {
+              font-size: 12px;
+              line-height: 15px;
+            }
+
             &:hover {
               color: $secondary;
             }
@@ -57,8 +83,19 @@ section {
               display: flex;
               justify-content: center;
               align-items: center;
+              @media screen and (max-width: 800px) {
+                inset: 0 -2rem;
+              }
+
               li {
                 margin-right: 20px;
+
+                img {
+                  @media screen and (max-width: 800px) {
+                    width: 20px;
+                    height: 40px;
+                  }
+                }
               }
             }
           }
@@ -66,10 +103,16 @@ section {
       }
 
       .line {
-        inset: -1.5rem 7.5rem;
+        inset: -1.5rem 8.6rem;
         height: 0px;
-        width: 74rem;
+        width: 84rem;
         border: 2.5px solid $white;
+
+        @media screen and (max-width: 800px) {
+          inset: -1.5rem -7rem;
+          height: 0px;
+          width: 74rem;
+        }
       }
 
       .bottom_footer {
@@ -79,11 +122,25 @@ section {
           align-items: center;
           list-style: none;
           padding: 21px;
+
+          @media screen and (max-width: 800px) {
+            padding: 10px;
+            justify-content: center;
+            inset: -0.5rem -2rem;
+          }
+
           li {
             font-size: 24px;
             font-weight: 700;
             line-height: 32px;
             letter-spacing: 0em;
+            cursor: pointer;
+
+            @media screen and (max-width: 800px) {
+              font-size: 12px;
+              line-height: 15px;
+              margin-right: 2rem;
+            }
           }
         }
       }
