--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -11,6 +11,11 @@ section {
   .padding {
     padding: 1rem;
 
+    @media screen and (max-width: 800px) {
+      margin-top: 4rem;
+      padding: 0.9rem;
+    }
+
     .review_sec {
       margin: 5rem 0;
     }
