--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -18,11 +18,20 @@ nav {
   letter-spacing: 0em;
   z-index: 1;
 
+
   .logo {
-    margin-right: 24rem;
     font-size: 32px;
     line-height: 43px;
+    margin-right: 24rem;
     text-align: left;
+
+    @media screen and (max-width: 770px) {
+      margin: 0;
+      inset: 0 -5rem;
+      font-size: 18px;
+      font-weight: 700;
+      line-height: 24px;
+    }
 
     span {
       &.cap_case {
@@ -42,6 +51,13 @@ nav {
     font-size: 16px;
     line-height: 21px;
     text-align: left;
+
+    @media screen and (max-width: 450px) {
+      display: none;
+    }
+    @media screen and (max-width: 320px) {
+      display: none;
+    }
 
     li {
       margin-left: 4rem;
